# mavros_controllers

controller_msgs/: CMakeLists.txt
geometric_controller/: CMakeLists.txt  gains.yaml  package.xml  tuningParameters.yaml
geometric_controller/include/geometric_controller/: geometric_controller.h
geometric_controller/launch/: config_file.rviz  tune_quad.launch
geometric_controller/src/: geometric_controller.cpp  geometric_controller_node.cpp
launch/: mavros_controllers.launch  outDoor_mavros_controller.launch  tune_quad.launch
trajectory_publisher/: CMakeLists.txt  package.xml
trajectory_publisher/include/trajectory_publisher/: trajectory.h  trajectoryPublisher.h
trajectory_publisher/src/: trajectory.cpp  trajectoryPublisher.cpp  trajectoryPublisher_node.cpp
